Updated packages and NodeJS version

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,7 @@
                 "invoke",
                 "local",
                 "-f",
-                "runSchedule",
-                "--path",
-                "lambda/events/data.json"
+                "runSchedule"
             ],
             "skipFiles": [
                 "${workspaceRoot}/node_modules/**",
